WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121091
[ATK] Incorrect type for holding float value
https://bugs.webkit.org/show_bug.cgi?id=121091
Summary
[ATK] Incorrect type for holding float value
Krzysztof Czech
Reported
2013-09-10 05:49:37 PDT
Fixing: GLib-GObject-CRITICAL **: g_value_set_float: assertion `G_VALUE_HOLDS_FLOAT (value)' failed. Basically g_value_set_float doesn't properly set newValue, because it's a double.
Attachments
Patch
(11.51 KB, patch)
2013-09-10 05:59 PDT
,
Krzysztof Czech
mario
: review+
Details
Formatted Diff
Diff
Patch
(11.52 KB, patch)
2013-09-10 07:03 PDT
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Czech
Comment 1
2013-09-10 05:59:50 PDT
Created
attachment 211192
[details]
Patch
Mario Sanchez Prada
Comment 2
2013-09-10 06:54:15 PDT
Comment on
attachment 211192
[details]
Patch This patch is a no brainer, but there's a typo in the bug's title which my OCD can't just ignore :). Giving r+ now, but please fix the ChangeLog before landing.
Mario Sanchez Prada
Comment 3
2013-09-10 06:54:37 PDT
Fixed typo in bug's title
Krzysztof Czech
Comment 4
2013-09-10 07:03:45 PDT
Created
attachment 211199
[details]
Patch
Krzysztof Czech
Comment 5
2013-09-10 07:04:11 PDT
> Fixed typo in bug's title
Done
WebKit Commit Bot
Comment 6
2013-09-10 07:45:15 PDT
Comment on
attachment 211199
[details]
Patch Clearing flags on attachment: 211199 Committed
r155444
: <
http://trac.webkit.org/changeset/155444
>
WebKit Commit Bot
Comment 7
2013-09-10 07:45:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug