[ATK] Incorrect type for holding float value https://bugs.webkit.org/show_bug.cgi?id=121091

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-09-10
Reviewed by Mario Sanchez Prada.

Tools:

Variable is not set properly, because of it's type.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::alterCurrentValue):

LayoutTests:

Sharing specific mac tests with efl and gtk.

* accessibility/aria-slider-value-change-expected.txt: Renamed from LayoutTests/platform/mac/accessibility/aria-slider-value-change-expected.txt.
* accessibility/aria-slider-value-change.html: Renamed from LayoutTests/platform/mac/accessibility/aria-slider-value-change.html.
* accessibility/range-alter-by-step-expected.txt: Renamed from LayoutTests/platform/mac/accessibility/range-alter-by-step-expected.txt.
* accessibility/range-alter-by-step.html: Renamed from LayoutTests/platform/mac/accessibility/range-alter-by-step.html.

Canonical link: https://commits.webkit.org/139011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155444 268f45cc-cd09-0410-ab3c-d52691b4dbfc